<package format="2">
  <name>turtlebot3_mover</name>
  <version>0.0.0</version>
  <description>A package to control TurtleBot3 navigation</description>
  <maintainer email="luongquanghuan@gmail.com">Luong Quang Huan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlebot3</exec_depend>
  <exec_depend>turtlebot3_simulations</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>